# FreeCAD

./: CMakeLists.txt  CMakePresets.json  README.md  bad-bld-msys-msvc.sh  bld-msys-clang.sh  launch.sh  mk-msvs-solution.cmd  mk-trace.cmd  mk-unix.sh  mk-vars.cmd  setup-msys.sh  setup-vcpkg.cmd  vs.base.props
cMake/: FindOCC.cmake  FreeCadMacros.cmake
cMake/FreeCAD_Helpers/: CompilerChecksAndSetups.cmake  CreatePackagingTargets.cmake  InitializeFreeCADBuildOptions.cmake  SetGlobalCompilerAndLinkerSettings.cmake  SetupBoost.cmake  SetupQt.cmake  SetupShibokenAndPyside.cmake
data/examples/: CMakeLists.txt
src/: LibraryVersions.h.cmake
src/App/: CMakeLists.txt  Document.cpp
src/Base/: BoundBox.h  CMakeLists.txt  Exception.cpp  Exception.h  Interpreter.cpp  ParameterPy.cpp  Quantity.cpp  Tools.cpp  Tools.h  UnitsApiPy.cpp
src/Doc/: CMakeLists.txt
src/Gui/: Application.cpp  CMakeLists.txt  Macro.cpp
src/Gui/PreferencePackTemplates/: CMakeLists.txt
src/Gui/PreferencePacks/: CMakeLists.txt
src/Gui/Stylesheets/: CMakeLists.txt
src/MacAppBundle/QuickLook/: CMakeLists.txt
src/Main/: CMakeLists.txt  MainGui.cpp
src/Mod/AddonManager/: CMakeLists.txt
src/Mod/AddonManager/Widgets/: CMakeLists.txt
src/Mod/Assembly/: CMakeLists.txt
src/Mod/Assembly/App/: CMakeLists.txt
src/Mod/Assembly/Gui/: CMakeLists.txt
src/Mod/BIM/: CMakeLists.txt
src/Mod/CAM/: CMakeLists.txt
src/Mod/CAM/App/: CMakeLists.txt
src/Mod/CAM/Gui/: CMakeLists.txt
src/Mod/CAM/PathSimulator/App/: CMakeLists.txt
src/Mod/CAM/PathSimulator/AppGL/: CMakeLists.txt
src/Mod/CAM/libarea/: CMakeLists.txt
src/Mod/Cloud/: CMakeLists.txt
src/Mod/Cloud/App/: CMakeLists.txt
src/Mod/Cloud/Gui/: CMakeLists.txt
src/Mod/Draft/: CMakeLists.txt
src/Mod/Draft/App/: CMakeLists.txt
src/Mod/Drawing/: CMakeLists.txt
src/Mod/Drawing/App/: CMakeLists.txt
src/Mod/Drawing/Gui/: CMakeLists.txt  PreCompiled.h
src/Mod/Fem/: CMakeLists.txt
src/Mod/Fem/App/: CMakeLists.txt
src/Mod/Fem/Gui/: CMakeLists.txt
src/Mod/Help/: CMakeLists.txt
src/Mod/Idf/: CMakeLists.txt
src/Mod/Import/: CMakeLists.txt
src/Mod/Import/App/: CMakeLists.txt
src/Mod/Import/Gui/: CMakeLists.txt
src/Mod/Inspection/App/: CMakeLists.txt
src/Mod/Inspection/Gui/: CMakeLists.txt
src/Mod/JtReader/App/: CMakeLists.txt
src/Mod/Material/: CMakeLists.txt
src/Mod/Material/App/: CMakeLists.txt  MaterialManagerPyImpl.cpp
src/Mod/Material/Gui/: CMakeLists.txt
src/Mod/Measure/: CMakeLists.txt
src/Mod/Measure/App/: CMakeLists.txt
src/Mod/Measure/Gui/: CMakeLists.txt
src/Mod/Mesh/: CMakeLists.txt
src/Mod/Mesh/App/: CMakeLists.txt
src/Mod/Mesh/Gui/: CMakeLists.txt
src/Mod/MeshPart/App/: CMakeLists.txt
src/Mod/MeshPart/Gui/: CMakeLists.txt
src/Mod/OpenSCAD/: CMakeLists.txt
src/Mod/Part/: CMakeLists.txt
src/Mod/Part/App/: CMakeLists.txt  OpenCascadeAll.h  TopoShapePyImp.cpp
src/Mod/Part/Gui/: CMakeLists.txt
src/Mod/PartDesign/: CMakeLists.txt
src/Mod/PartDesign/App/: CMakeLists.txt
src/Mod/PartDesign/Gui/: CMakeLists.txt
src/Mod/Plot/: CMakeLists.txt
src/Mod/Points/: CMakeLists.txt
src/Mod/Points/App/: CMakeLists.txt
src/Mod/Points/Gui/: CMakeLists.txt
src/Mod/ReverseEngineering/: CMakeLists.txt
src/Mod/ReverseEngineering/App/: CMakeLists.txt
src/Mod/ReverseEngineering/Gui/: CMakeLists.txt
src/Mod/Robot/: CMakeLists.txt
src/Mod/Robot/App/: CMakeLists.txt
src/Mod/Robot/App/kdl_cp/: CMakeLists.txt
src/Mod/Robot/Gui/: CMakeLists.txt
src/Mod/Sandbox/App/: CMakeLists.txt
src/Mod/Sandbox/Gui/: CMakeLists.txt
src/Mod/Show/: CMakeLists.txt
src/Mod/Sketcher/: CMakeLists.txt
src/Mod/Sketcher/App/: CMakeLists.txt
src/Mod/Sketcher/Gui/: CMakeLists.txt
src/Mod/Spreadsheet/: CMakeLists.txt
src/Mod/Spreadsheet/App/: CMakeLists.txt
src/Mod/Spreadsheet/Gui/: CMakeLists.txt
src/Mod/Start/: CMakeLists.txt
src/Mod/Start/App/: CMakeLists.txt
src/Mod/Start/Gui/: CMakeLists.txt
src/Mod/Surface/: CMakeLists.txt
src/Mod/Surface/App/: CMakeLists.txt
src/Mod/Surface/Gui/: CMakeLists.txt
src/Mod/TechDraw/: CMakeLists.txt
src/Mod/TechDraw/App/: CMakeLists.txt
src/Mod/TechDraw/Gui/: CMakeLists.txt
src/Mod/Test/: CMakeLists.txt
src/Mod/Test/Gui/: CMakeLists.txt
src/Mod/Tux/: CMakeLists.txt
src/Mod/Web/: CMakeLists.txt
src/Mod/Web/App/: CMakeLists.txt
src/Tools/: SubWCRev.py
src/Tools/_TEMPLATEPY_/: CMakeLists.txt
src/Tools/_TEMPLATE_/: CMakeLists.txt
tests/src/Mod/Material/App/: CMakeLists.txt
